kubernetes/api/cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blackjack-api-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: blackjack-api
  ports:
    - port: 4000
      targetPort: 4000
