kubernetes/api/node-port-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blackjack-api-nodeport
spec:
  type: NodePort
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 31516
  selector:
    component: blackjack-api
