kubernetes/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blackjack-api-ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: $1
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
      - nikodemwrona.dev
      - www.nikodemwrona.dev
      secretName: nikodemwrona.dev
  rules:
    - host: nikodemwrona.dev
      http:
        paths:
          - path: /blackjack/api?(.*)
            pathType: Exact
            backend:
              service:
                name: blackjack-api-cluster-ip
                port:
                  number: 4000
    - host: www.nikodemwrona.dev
      http:
        paths:
          - path: /blackjack/api?(.*)
            pathType: Exact
            backend:
              service:
                name: blackjack-api-cluster-ip
                port:
                  number: 4000
